@@ -3,10 +3,11 @@ PSPSDK=/opt/pspsdk/psp/
 TARGET = rockbot
 OBJS   = main.o options/key_map.o inputlib.o timerlib.o soundlib.o file/file_io.o colision_detection.o graphicslib.o \
 sceneslib.o stage_select.o graphic/option_picker.o classmap.o objects/object.o character/character.o projectilelib.o \
-graphic/animation.o stage.o stage_select.o class_config.o scenes/dialogs.o scenes/ending.o game.o character/classplayer.o \
-character/classnpc.o character/artificial_inteligence.o character/classboss.o aux_tools/trajectory_parabola.o file/convert.o \
-graphic/draw.o character/movement/jump.o character/movement/inertia.o scenes/password_generator.o \
-ports/psp/psp_ram.o
+graphic/animation.o stage.o stage_select.o class_config.o scenes/dialogs.o game.o character/classplayer.o \
+character/classnpc.o character/artificial_inteligence.o aux_tools/trajectory_parabola.o file/convert.o \
+graphic/draw.o character/movement/jump.o character/movement/inertia.o scenes/password_generator.o game_mediator.o \
+ports/psp/psp_ram.o strings_map.o file/fio_strings.o file/fio_common.o aux_tools/stringutils.o aux_tools/fps_control.o \
+docs/game_manual.o
  
 INCDIR   = /opt/pspsdk/psp/sdk/include
 CFLAGS   = -G0 -Wall -O3 -DPSP -DHANDHELD -g
