@@ -582,15 +582,13 @@ namespace format_v4 {
 
 
         // ------- DEBUG ------- //
-        /*
         data_out.stages[INTRO_STAGE] = 1;
-        for (int i=1; i<SKULLCASTLE5; i++) {
+        for (int i=1; i<CASTLE1_STAGE1; i++) {
             data_out.stages[i] = 1;
         }
-        */
-        data_out.stages[INTRO_STAGE] = 1;
-        data_out.stages[STAGE1] = 0;
-        data_out.stages[STAGE2] = 0;
+        //data_out.stages[INTRO_STAGE] = 1;
+        //data_out.stages[STAGE1] = 0;
+        //data_out.stages[STAGE2] = 0;
         //data_out.stages[STAGE8] = 0;
         //data_out.selected_player = PLAYER_3;
         /*
